# surge

./: .travis.yml  README.md  README.rst  pyproject.toml
.github/workflows/: poetry.yml  tests.yml
surge/: __main__.py  _metadata.py  _transducer.py  actor.py  base.py  bencoding.py  channel.py  cli.py  events.py  extension_protocol.py  magnet.py  messages.py  metadata.py  metadata_protocol.py  mex.py  peer_protocol.py  peer_queue.py  protocol.py  runners.py  state.py  stream.py  torrent.py  tracker.py  tracker_protocol.py  udp.py
surge/messages/: __init__.py  _base.py  _extension.py  _metadata.py
surge/mex/: __init__.py  _info.py  _transducer.py
surge/protocol/: __init__.py  _extension.py  _metadata.py  _peer.py  _stream.py  base.py  mex.py
surge/tracker/: __init__.py  _metadata.py  _udp.py  actors.py  messages.py  metadata.py  protocol.py
tests/: _example.py  _tracker.py  example.torrent  test_actor.py  test_bencoding.py  test_events.py  test_magnet.py  test_messages.py  test_mex.py  test_protocol.py  test_state.py  test_surge.py  test_tracker.py  tracker.py
tests/example/: a  b
