[tool.poetry]
name = "surge"
version = "0.1.0"
description = "Download files from the BitTorrent network."
authors = ["zuqq"]

[tool.poetry.dependencies]
python = "^3.8"
uvloop = {version = "^0.15.2", optional = true}

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
uvloop = ["uvloop"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
