[project]
name = "surge"
version = "0.1.0"
description = "Download files from the BitTorrent network."
authors = [{name = "zuqq"}]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
uvloop = ["uvloop>=0.15.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
