[project]
name = "surge"
version = "0.1.0"
description = "Download files from the BitTorrent network."
authors = [{name = "zuqq"}]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
uvloop = ["uvloop>=0.15.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pyright>=1.1", "ruff>=0.8"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Ruff-specific rules
    "RUF",
]
